--- a/.github/workflows/manual-patch-release.yml
+++ b/.github/workflows/manual-patch-release.yml
@@ -16,6 +16,13 @@ jobs:
       
       - name: Bump version
         run: echo "::set-output name=version::$(npm version patch)"
+        
+      - name: Debug
+        run: |
+          echo ${{ steps }}
+          echo ${{ steps.bump-version }}
+          echo ${{ steps.bump-version.outputs }}
+          echo ${{ steps.bump-version.outputs.version }}
       
       - name: Create draft release in repository
         run: gh release create ${{ steps.bump-version.outputs.version }} --generate-notes --draft
