--- a/.github/workflows/manual-patch-release.yml
+++ b/.github/workflows/manual-patch-release.yml
@@ -17,13 +17,9 @@ jobs:
       - name: Bump version
         id: bump-version
         run: echo "::set-output name=version::$(npm version patch)"
-        
-      - name: Debug
-        run: |
-          echo ${{ join(steps) }}
-          echo ${{ steps.bump-version }}
-          echo ${{ steps.bump-version.outputs }}
-          echo ${{ steps.bump-version.outputs.version }}
+      
+      - name: Push new tag
+        run: git push
       
       - name: Create draft release in repository
         run: gh release create ${{ steps.bump-version.outputs.version }} --generate-notes --draft --prerelease
