--- a/.github/workflows/manual-patch-release.yml
+++ b/.github/workflows/manual-patch-release.yml
@@ -17,13 +17,9 @@ jobs:
       - name: Bump version
         id: bump-version
         run: echo "::set-output name=version::$(npm version patch)"
-      
-      - name: Push new tag
-        # Force push to protected branch
-        run: git push --force
-      
+        
       - name: Create draft release in repository
-        run: gh release create ${{ steps.bump-version.outputs.version }} --generate-notes --draft --prerelease
+        run: git push && gh release create ${{ steps.bump-version.outputs.version }} --generate-notes --draft --prerelease
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
