--- a/.github/workflows/manual-patch-release.yml
+++ b/.github/workflows/manual-patch-release.yml
@@ -19,7 +19,7 @@ jobs:
         run: echo "::set-output name=version::$(npm version patch)"
         
       - name: Create draft release in repository
-        run: git push && gh release create ${{ steps.bump-version.outputs.version }} --generate-notes --draft --prerelease
+        run: git push --tags && gh release create ${{ steps.bump-version.outputs.version }} --generate-notes --draft --prerelease
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
