--- a/.github/workflows/manual-patch-release.yml
+++ b/.github/workflows/manual-patch-release.yml
@@ -16,10 +16,13 @@ jobs:
       
       - name: Bump version
         id: bump-version
-        run: echo "::set-output name=version::$(npm version patch)"
+        run: echo "::set-output name=version::$(npm version patch --no-git-tag-version)"
+        
+      - name: Push version commit
+        run: git push
         
       - name: Create draft release in repository
-        run: git push --tags && gh release create ${{ steps.bump-version.outputs.version }} --generate-notes --draft --prerelease
+        run: gh release create ${{ steps.bump-version.outputs.version }} --target ${{ steps.bump-version.outputs.version }} --generate-notes --draft --prerelease
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
