--- a/.github/workflows/manual-patch-release.yml
+++ b/.github/workflows/manual-patch-release.yml
@@ -22,7 +22,7 @@ jobs:
         run: git push
         
       - name: Create draft release in repository
-        run: gh release create ${{ steps.bump-version.outputs.version }} --target ${{ steps.bump-version.outputs.version }} --generate-notes --draft --prerelease
+        run: gh release create ${{ steps.bump-version.outputs.version }} --target main --generate-notes --draft --prerelease
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
