--- a/package.json
+++ b/package.json
@@ -33,6 +33,17 @@
     "homepage": "https://zenfuse.js",
     "types": "./types",
     "devDependencies": {
+        "@cspell/dict-companies": "^3.0.1",
+        "@cspell/dict-cryptocurrencies": "^3.0.0",
+        "@cspell/dict-docker": "^1.1.1",
+        "@cspell/dict-en_us": "^3.0.0",
+        "@cspell/dict-filetypes": "^3.0.0",
+        "@cspell/dict-fullstack": "^3.0.0",
+        "@cspell/dict-html": "^4.0.0",
+        "@cspell/dict-node": "^4.0.1",
+        "@cspell/dict-npm": "^4.0.1",
+        "@cspell/dict-software-terms": "^3.0.1",
+        "@cspell/dict-typescript": "^3.0.1",
         "@cspell/eslint-plugin": "^6.0.0",
         "@types/ws": "^8.5.2",
         "@typescript-eslint/eslint-plugin": "^5.14.0",
@@ -40,6 +51,7 @@
         "dotenv": "^16.0.0",
         "eslint": "^8.10.0",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-file-progress": "^1.3.0",
         "eslint-plugin-jest": "^27.0.1",
         "eslint-plugin-jsdoc": "^39.2.8",
         "eslint-plugin-prettier": "^4.0.0",
