--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,13 @@
     "parserOptions": {
         "ecmaVersion": 2019
     },
-    "plugins": ["prettier", "@typescript-eslint", "jest", "jsdoc", "file-progress"],
+    "plugins": [
+        "prettier",
+        "@typescript-eslint",
+        "jest",
+        "jsdoc",
+        "file-progress"
+    ],
     "rules": {
         "file-progress/activate": 1,
         "prettier/prettier": "error",
