--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,9 +2,9 @@ name: deploy-docs
 
 on:
   push:
-    branches: [main documentation]
+    branches: [main, documentation]
   pull_request:
-    branches: [main documentation]
+    branches: [main, documentation]
  
   workflow_dispatch:
 
