--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -11,22 +11,17 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
     publish:
-        runs-on: ubuntu-latest
+        runs-on: jarredsumner/bun:edge
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - name: Check out repo
               uses: actions/checkout@v2
-            # Node is required for npm
-            - name: Set up Node
-              uses: actions/setup-node@v2
-              with:
-                  node-version: '16'
             # Install and build Docusaurus website
             - name: Build Docusaurus website
               run: |
                   cd www
-                  npm install 
-                  npm run build
+                  bun install 
+                  bun run build
             - name: Deploy to GitHub Pages
               if: success()
               uses: crazy-max/ghaction-github-pages@v2
