--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,9 @@ jobs:
               with:
                   cache: 'npm'
                   cache-dependency-path: lib/package-lock.json
+            - name: Setup dependencies
               working-directory: ./lib
-            - run: npm ci
+              run: npm ci
 
             - name: Cache Mocks
               uses: actions/cache@v3.0.8
@@ -38,8 +39,7 @@ jobs:
                   path: lib/tests/exchanges/*/mocks/static/*
                   key: static-mocks-${{ github.sha }}
               working-directory: ./lib
-
-            - run: npm run download-mocks -- --force
+              run: npm run download-mocks -- --force
 
     test:
         needs: [lint, mocks]
