--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
         branches: [main]
     pull_request:
         branches: [main]
+        
+defaults:
+    run:
+        shell: bash
+        working-directory: lib
 
 jobs:
     lint:
@@ -16,7 +21,6 @@ jobs:
               with:
                   cache: 'npm'
                   cache-dependency-path: lib/package-lock.json
-              working-directory: ./lib
             - run: npm ci
             - run: npm run lint
 
@@ -30,7 +34,6 @@ jobs:
                   cache: 'npm'
                   cache-dependency-path: lib/package-lock.json
             - name: Setup dependencies
-              working-directory: ./lib
               run: npm ci
 
             - name: Cache Mocks
@@ -38,7 +41,6 @@ jobs:
               with:
                   path: lib/tests/exchanges/*/mocks/static/*
                   key: static-mocks-${{ github.sha }}
-              working-directory: ./lib
               run: npm run download-mocks -- --force
 
     test:
@@ -55,7 +57,6 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
                   cache-dependency-path: lib/package-lock.json
-              working-directory: ./lib
 
             - name: Restore mocks
               uses: actions/cache@v3.0.8
@@ -64,7 +65,6 @@ jobs:
                   key: static-mocks-${{ github.sha }}
                   restore-keys: |
                       static-mocks-${{ github.sha }}
-              working-directory: ./lib
 
             - run: npm ci
             - run: npm test
