--- a/.github/workflows/snyk-analysis.yml
+++ b/.github/workflows/snyk-analysis.yml
@@ -14,6 +14,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
+              with:
+                  path: lib
             - name: Run Snyk
               # Snyk can be used to break the build when it detects security issues.
               # In this case we want to upload the issues to GitHub Code Scanning
