--- a/.github/workflows/snyk-analysis.yml
+++ b/.github/workflows/snyk-analysis.yml
@@ -14,8 +14,6 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-              with:
-                  path: lib
             - name: Run Snyk
               # Snyk can be used to break the build when it detects security issues.
               # In this case we want to upload the issues to GitHub Code Scanning
@@ -24,7 +22,7 @@ jobs:
               env:
                   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
               with:
-                  args: --sarif-file-output=snyk.sarif
+                  args: --sarif-file-output=snyk.sarif --file=lib/package.json
 
             - name: Upload result to GitHub Code Scanning
               uses: github/codeql-action/upload-sarif@v2
