--- a/.github/workflows/snyk-analysis.yml
+++ b/.github/workflows/snyk-analysis.yml
@@ -22,7 +22,7 @@ jobs:
               env:
                   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
               with:
-                  args: --sarif-file-output=snyk.sarif --file=lib/package.json
+                  args: --sarif-file-output=snyk.sarif --all-projects
 
             - name: Upload result to GitHub Code Scanning
               uses: github/codeql-action/upload-sarif@v2
