--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -21,13 +21,12 @@ defaults:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    build:
+    debloy:
         runs-on: ubuntu-latest
         steps:
-            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - name: Check out repo
               uses: actions/checkout@v2
-            # Node is required for npm
+
             - name: Set up Bun
               uses: antongolub/action-setup-bun@v1
               with:
@@ -38,10 +37,7 @@ jobs:
 
             - name: Build Docusaurus website
               run: bun run build
-    deploy:
-        needs: build
-        runs-on: ubuntu-latest
-        steps:
+              
             - name: Deploy to GitHub Pages
               uses: crazy-max/ghaction-github-pages@v2
               with:
@@ -49,3 +45,4 @@ jobs:
                   build_dir: www/build
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           
