--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -1,9 +1,14 @@
-name: Docs deploy
+name: Deploy documentation
 
 on:
-    workflow_run:
-        workflows: ['Docs CI']
-        types: [completed]
+    push:
+        branches: [main]
+        paths:
+            - 'www/**'
+    pull_request:
+        branches: [main]
+        paths:
+            - 'www/**'
 
     workflow_dispatch:
     workflow_call:
@@ -12,11 +17,31 @@ defaults:
     run:
         shell: bash
         working-directory: www
-    
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+    lint:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Check out repo
+              uses: actions/checkout@v2
+            - uses: extractions/setup-just@v1
+
+            - name: Set up Bun
+              uses: antongolub/action-setup-bun@v1
+              with:
+                  cache: true
+
+            - name: Install npm dependencies
+              run: bun install
+
+            - name: Run eslint
+              run: just eslint www
+              
+            - name: Run spellcheck
+              run: just cspell www
+
     debloy:
+        needs: lint
         runs-on: ubuntu-latest
         steps:
             - name: Check out repo
