--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -70,6 +70,12 @@ jobs:
         steps:
             - name: Check out repo
               uses: actions/checkout@v2
+          
+            - name: Download a Build Artifact
+              uses: actions/download-artifact@v3.0.1
+              with:
+                  name: Docusaurus website
+                  path: www/build
               
             - name: Deploy to GitHub Pages
               uses: crazy-max/ghaction-github-pages@v2
