--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,34 +1,83 @@
-name: Deploy Documentation
+name: Deploy documentation
 
 on:
     push:
         branches: [main]
+        paths:
+            - 'www/**'
     pull_request:
         branches: [main]
+        paths:
+            - 'www/**'
 
     workflow_dispatch:
+    workflow_call:
+    
+defaults:
+    run:
+        shell: bash
+        working-directory: www
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    publish:
+    lint:
         runs-on: ubuntu-latest
         steps:
-            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - name: Check out repo
               uses: actions/checkout@v2
-            # Node is required for npm
+            - uses: extractions/setup-just@v1
+
             - name: Set up Bun
               uses: antongolub/action-setup-bun@v1
               with:
                   cache: true
-            # Install and build Docusaurus website
+
+            - name: Install npm dependencies
+              run: bun install
+
+            - name: Run eslint
+              run: just eslint www
+              
+            - name: Run spellcheck
+              run: just cspell www
+
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Check out repo
+              uses: actions/checkout@v2
+
+            - name: Set up Bun
+              uses: antongolub/action-setup-bun@v1
+              with:
+                  cache: true
+
+            - name: Install npm dependencies
+              run: bun install
+
             - name: Build Docusaurus website
-              run: |
-                  cd www
-                  bun install
-                  bun run build
-            - name: Deploy to GitHub Pages
+              run: bun run build
+
+            - name: Upload a Build Artifact
               if: success()
+              uses: actions/upload-artifact@v3.1.1
+              with:
+                  name: Docusaurus website
+                  path: www/build
+              
+    deploy:
+        needs: [lint, build]
+        runs-on: ubuntu-latest
+        steps:
+            - name: Check out repo
+              uses: actions/checkout@v2
+          
+            - name: Download a Build Artifact
+              uses: actions/download-artifact@v3.0.1
+              with:
+                  name: Docusaurus website
+                  path: www/build
+              
+            - name: Deploy to GitHub Pages
               uses: crazy-max/ghaction-github-pages@v2
               with:
                   target_branch: gh-pages
