--- a/.github/workflows/npm-ci.yml
+++ b/.github/workflows/npm-ci.yml
@@ -57,7 +57,7 @@ jobs:
                   key: static-mocks-${{ github.sha }}
             
             - name: Download mock files from exchanges
-              run: just download-mocks -- --force
+              run: just download-mocks
 
     unit-tests:
         needs: [lint, mocks]
