--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,3 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
 name: Publish release
 
 on:
@@ -12,7 +9,7 @@ jobs:
     ci:
         uses: zenfuse/zenfuse.js/.github/workflows/ci.yml@main
 
-    publish:
+    publish-npm:
         needs: ci
         runs-on: ubuntu-latest
         steps:
@@ -25,3 +22,18 @@ jobs:
             - run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  
+    publish-github:
+        needs: ci
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: '16.x'
+                  registry-url: 'https://npm.pkg.github.com'
+            - run: npm ci
+            - run: npm publish
+              env:
+                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
