--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ on:
                 required: false
                 default: false
     release:
-        types: [created]
+        types: [published]
         
 defaults:
     run:
@@ -28,13 +28,12 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
-                  node-version: '16.x'
+                  node-version: 18
                   registry-url: 'https://registry.npmjs.org'
-                  always-auth: true
                   cache: npm
                   cache-dependency-path: lib
             - run: npm ci
-            - run: npm publish
+            - run: npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
                   
@@ -49,9 +48,8 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
-                  node-version: '16.x'
+                  node-version: 18
                   registry-url: 'https://npm.pkg.github.com'
-                  always-auth: true
                   scope: '@zenfuse'
                   cache: npm
                   cache-dependency-path: lib
