--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -5,20 +5,12 @@ on:
     workflow_call:
     push:
         branches: [main]
-        paths:
-            - lib/**
     pull_request:
         branches: [main]
-        paths:
-            - lib/**
-
-defaults:
-    run:
-        shell: bash
-        working-directory: lib
 
 jobs:
     lint:
+        name: Lint files
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -26,17 +18,18 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   cache: 'npm'
-                  cache-dependency-path: lib/package-lock.json
+
             - name: Install npm dependencies
               run: npm ci
 
             - name: Lint javascript files
-              run: just eslint lib
+              run: just eslint
 
-            - name: Spellcheck all library files
-              run: just cspell lib
+            - name: Spellcheck all files
+              run: just cspell
 
     mocks:
+        name: Preparing mocks
         needs: lint
         runs-on: ubuntu-latest
         steps:
@@ -45,7 +38,6 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   cache: 'npm'
-                  cache-dependency-path: lib/package-lock.json
 
             - name: Install npm dependencies
               run: npm ci
@@ -53,17 +45,11 @@ jobs:
             - name: Trying to restore cached mocks
               uses: actions/cache@v3.0.8
               with:
-                  path: lib/tests/exchanges/*/mocks/static/*
+                  path: tests/exchanges/*/mocks/static/*
                   key: static-mocks-${{ github.sha }}
 
             - name: Download mock files from exchanges
-              run: just download-mocks
-
-            - name: Cache mocks
-              uses: actions/cache@v3.0.8
-              with:
-                  path: lib/tests/exchanges/*/mocks/static/*
-                  key: static-mocks-${{ github.sha }}
+              run: just download-mocks -- --force
 
     unit-tests:
         needs: lint
@@ -79,12 +65,11 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
-                  cache-dependency-path: lib/package-lock.json
 
             - name: Restore cached mocks
               uses: actions/cache@v3.0.8
               with:
-                  path: lib/tests/exchanges/*/mocks/static/*
+                  path: tests/exchanges/*/mocks/static/*
                   key: static-mocks-${{ github.sha }}
                   restore-keys: |
                       static-mocks-${{ github.sha }}
@@ -109,12 +94,11 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
-                  cache-dependency-path: lib/package-lock.json
 
             - name: Restore cached mocks
               uses: actions/cache@v3.0.8
               with:
-                  path: lib/tests/exchanges/*/mocks/static/*
+                  path: tests/exchanges/*/mocks/static/*
                   key: static-mocks-${{ github.sha }}
                   restore-keys: |
                       static-mocks-${{ github.sha }}
