--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -11,16 +11,13 @@ on:
     release:
         types: [published]
 
-defaults:
-    run:
-        working-directory: lib
-
 jobs:
     CI:
         if: ${{ inputs.skip-ci == false }}
         uses: zenfuse/zenfuse.js/.github/workflows/package-ci.yml@main
 
     publish-npm:
+        name: Publish to npm
         needs: CI
         if: always() && (needs.CI.result == 'success' || needs.CI.result == 'skipped')
         runs-on: ubuntu-latest
@@ -31,17 +28,18 @@ jobs:
                   node-version: 18
                   registry-url: 'https://registry.npmjs.org'
                   cache: npm
-                  cache-dependency-path: lib
+
             - run: npm ci
             - run: npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     publish-github:
+        name: Publish to gp
         needs: CI
         if: always() && (needs.CI.result == 'success' || needs.CI.result == 'skipped')
         permissions:
-            contents: write
+            contents: read
             packages: write
         runs-on: ubuntu-latest
         steps:
@@ -52,10 +50,10 @@ jobs:
                   registry-url: 'https://npm.pkg.github.com'
                   scope: '@zenfuse'
                   cache: npm
-                  cache-dependency-path: lib
 
             - name: Append org to package name
-              run: contents="$(jq '.name = "@zenfuse/zenfuse"' package.json)" && echo -E "${contents}" > pacakge.json
+              run: |
+                contents="$(jq '.name = "@zenfuse/zenfuse"' package.json)" && echo -E "${contents}" > pacakge.json
 
             - run: npm ci
             - run: npm publish --@zenfuse:registry=https://npm.pkg.github.com
