--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -58,7 +58,7 @@ jobs:
                   key: static-mocks-${{ github.sha }}
 
             - name: Download mock files from exchanges
-              run: just download-mocks -- --force
+              run: just download-mocks
 
     unit-tests:
         needs: lint
