--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -2,6 +2,12 @@ name: Package CI
 
 on:
     workflow_dispatch:
+        inputs:
+            force:
+                type: boolean
+                description: Recache static mocks
+                required: false
+                default: false
     workflow_call:
     push:
         branches: [main]
@@ -51,14 +57,23 @@ jobs:
             - name: Install npm dependencies
               run: npm ci
 
-            - name: Trying to restore cached mocks
-              uses: actions/cache@v3.0.8
+            - name: Download static mocks
+              if: ${{ inputs.force == false }}
+              uses: actions/download-artifact@v3.0.1
               with:
-                  path: tests/exchanges/*/mocks/static/*
-                  key: static-mocks-${{ github.sha }}
+                name: static-mocks
+                path: tests/exchanges/*/mocks/static/*
 
             - name: Download mock files from exchanges
               run: just download-mocks
+              
+            - name: Upload static mocks
+              uses: actions/upload-artifact@v3.1.1
+              with:
+                name: static-mocks
+                path: tests/exchanges/*/mocks/static/*
+                if-no-files-found: error
+                retention-days: 1
 
     unit-tests:
         needs: lint
@@ -74,14 +89,6 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
-
-            - name: Restore cached mocks
-              uses: actions/cache@v3.0.8
-              with:
-                  path: tests/exchanges/*/mocks/static/*
-                  key: static-mocks-${{ github.sha }}
-                  restore-keys: |
-                      static-mocks-${{ github.sha }}
 
             - name: Install npm dependencies
               run: npm ci
@@ -104,13 +111,11 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
 
-            - name: Restore cached mocks
-              uses: actions/cache@v3.0.8
+            - name: Download static mocks
+              uses: actions/download-artifact@v3.0.1
               with:
-                  path: tests/exchanges/*/mocks/static/*
-                  key: static-mocks-${{ github.sha }}
-                  restore-keys: |
-                      static-mocks-${{ github.sha }}
+                name: static-mocks
+                path: tests/exchanges/*/mocks/static/*
 
             - name: Install npm dependencies
               run: npm ci
