--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -8,6 +8,11 @@ on:
                 description: Recache static mocks
                 required: false
                 default: false
+            skip-lint:
+                type: boolean
+                description: Skip lint
+                required: false
+                default: false
     workflow_call:
     push:
         branches: [main]
@@ -17,6 +22,7 @@ on:
 jobs:
     lint:
         name: Lint files
+        if: ${{ inputs.skip-lint == false }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -46,6 +52,7 @@ jobs:
     mocks:
         name: Preparing mocks
         needs: lint
+        if: always() && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -61,6 +68,7 @@ jobs:
               uses: actions/cache@v3.0.11
               with:
                 path: tests/exchanges/*/mocks/static/*
+                key: static-mocks
 
             - name: Download mock files from exchanges
               run: just download-mocks
@@ -75,6 +83,7 @@ jobs:
 
     unit-tests:
         needs: lint
+        if: always() && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -96,6 +105,7 @@ jobs:
 
     integration-tests:
         needs: [lint, mocks]
+        if: always() && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
         runs-on: ubuntu-latest
         strategy:
             matrix:
