--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -19,7 +19,8 @@ jobs:
     publish-npm:
         name: Publish to npm
         needs: CI
-        if: always() && (needs.CI.result == 'success' || needs.CI.result == 'skipped')
+        if: ${{ false }}
+        # if: always() && (needs.CI.result == 'success' || needs.CI.result == 'skipped')
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -48,14 +49,13 @@ jobs:
               with:
                   node-version: 18
                   registry-url: 'https://npm.pkg.github.com'
-                  scope: '@zenfuse'
                   cache: npm
 
             - name: Append org to package name
               run: |
-                contents="$(jq '.name = "@zenfuse/zenfuse"' package.json)" && echo -E "${contents}" > pacakge.json
+                contents="$(jq '.name = "@izzqz/zenfuse"' package.json)" && echo -E "${contents}" > pacakge.json
 
             - run: npm ci
-            - run: npm publish --@zenfuse:registry=https://npm.pkg.github.com
+            - run: cat package.json && npm publish --@zenfuse:registry=https://npm.pkg.github.com
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
