--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -2,6 +2,12 @@ name: Package CI
 
 on:
     workflow_dispatch:
+        inputs:
+            skip-lint:
+                type: boolean
+                description: Skip lint
+                required: false
+                default: false
     workflow_call:
     push:
         branches: [main]
@@ -11,6 +17,7 @@ on:
 jobs:
     lint:
         name: Lint files
+        if: ${{ inputs.skip-lint == false }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -40,6 +47,7 @@ jobs:
     mocks:
         name: Preparing mocks
         needs: lint
+        if: always() && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -50,22 +58,31 @@ jobs:
 
             - name: Install npm dependencies
               run: npm ci
-
-            - name: Trying to restore cached mocks
-              uses: actions/cache@v3.0.8
+              
+            - name: Restoring mocks from cache
+              uses: actions/cache@v3.0.11
               with:
-                  path: tests/exchanges/*/mocks/static/*
-                  key: static-mocks-${{ github.sha }}
+                path: tests/exchanges/*/mocks/static/*
+                key: static-mocks
 
             - name: Download mock files from exchanges
               run: just download-mocks
 
+            - name: Upload static mocks
+              uses: actions/upload-artifact@v3.1.1
+              with:
+                name: static-mocks
+                path: tests/exchanges/*/mocks/static/*
+                if-no-files-found: error
+                retention-days: 1
+
     unit-tests:
         needs: lint
+        if: always() && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: [14.x, 16.x, 18.x]
+                node-version: [14, 16, 18]
         steps:
             - uses: actions/checkout@v3
             - uses: extractions/setup-just@v1
@@ -74,14 +91,6 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
-
-            - name: Restore cached mocks
-              uses: actions/cache@v3.0.8
-              with:
-                  path: tests/exchanges/*/mocks/static/*
-                  key: static-mocks-${{ github.sha }}
-                  restore-keys: |
-                      static-mocks-${{ github.sha }}
 
             - name: Install npm dependencies
               run: npm ci
@@ -91,10 +100,11 @@ jobs:
 
     integration-tests:
         needs: [lint, mocks]
+        if: always() && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: [14.x, 16.x, 18.x]
+                node-version: [14, 16, 18]
         steps:
             - uses: actions/checkout@v3
             - uses: extractions/setup-just@v1
@@ -104,13 +114,11 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
 
-            - name: Restore cached mocks
-              uses: actions/cache@v3.0.8
+            - name: Download static mocks
+              uses: actions/download-artifact@v3.0.1
               with:
-                  path: tests/exchanges/*/mocks/static/*
-                  key: static-mocks-${{ github.sha }}
-                  restore-keys: |
-                      static-mocks-${{ github.sha }}
+                name: static-mocks
+                path: tests/exchanges
 
             - name: Install npm dependencies
               run: npm ci
