--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -12,13 +12,14 @@ on:
         types: [published]
 
 jobs:
-    CI:
+    ci:
+        name: CI
         if: ${{ inputs.skip-ci == false }}
         uses: zenfuse/zenfuse.js/.github/workflows/package-ci.yml@main
 
     publish-npm:
         name: Publish to npm
-        needs: CI
+        needs: ci
         if: always() && (needs.CI.result == 'success' || needs.CI.result == 'skipped')
         runs-on: ubuntu-latest
         steps:
@@ -29,14 +30,17 @@ jobs:
                   registry-url: 'https://registry.npmjs.org'
                   cache: npm
 
-            - run: npm ci
+            - name: Install npm dependencies
+              run: npm ci
+              
+            - name: Publish to npm registry
             - run: npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-    publish-github:
+    publish-gp:
         name: Publish to gp
-        needs: CI
+        needs: ci
         if: always() && (needs.CI.result == 'success' || needs.CI.result == 'skipped')
         permissions:
             contents: read
@@ -48,14 +52,17 @@ jobs:
               with:
                   node-version: 18
                   registry-url: 'https://npm.pkg.github.com'
-                  scope: '@zenfuse'
                   cache: npm
-
-            - name: Append org to package name
+            
+            - name: Install npm dependencies
+              run: npm ci
+            
+            - name: Publish to github registry
               run: |
-                contents="$(jq '.name = "@zenfuse/zenfuse"' package.json)" && echo -E "${contents}" > pacakge.json
+                # Add organisation scope to package name
+                echo "$( jq '.name = "@zenfuse/zenfuse"' package.json )" > package.json
+                # And publish this boy 
+                npm publish --@zenfuse:registry=https://npm.pkg.github.com
 
-            - run: npm ci
-            - run: npm publish --@zenfuse:registry=https://npm.pkg.github.com
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
