--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -34,7 +34,7 @@ jobs:
               run: npm ci
               
             - name: Publish to npm registry
-            - run: npm publish --access public
+              run: npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
